# KingsAndShips

./: .gitignore  CMakeLists.txt  README.md  kingsandships.1.in  kingsandships.desktop  kingsandships.desktop.in  meson.build  preferences.ini
data/img/: Clouds_00.tsx  Ground_01.tsx  Menu_01.tsx  Menu_02.tsx  Menu_03.tsx  Menu_details.tsx  Parchments.tsx  ProgressBar.tsx  Rocks_00.tsx  Select_01.tsx  Trees_00.tsx  Water_00.tsx  Weapons.tsx  archerTower_00.tsx  archerTower_01.tsx  archerTower_02.tsx  archerTower_03.tsx  barricade_01.tsx  boat_00.tsx  boat_00_damaged.tsx  boat_00_dying.tsx  boat_00_sailing.tsx  boat_00_sinking.tsx  boat_01.tsx  boat_01_damaged.tsx  boat_01_dying.tsx  boat_01_sailing.tsx  boat_01_sinking.tsx  boat_02.tsx  boat_02_damaged.tsx  boat_02_dying.tsx  boat_02_sailing.tsx  boat_02_sinking.tsx  boat_03.tsx  boat_03_damaged.tsx  boat_03_dying.tsx  boat_03_sailing.tsx  boat_03_sinking.tsx  boat_dead_00.tsx  boat_dead_01.tsx  (+19 more)
data/levels/: Ground_01.tsx  Level_0.tmx  Level_00.tmx  Level_01.tmx  Level_1.tmx  Level_2.tmx  Level_3.tmx  Level_4.tmx  Level_5.tmx  Level_6.tmx  Rocks_00.tsx  Trees_00.tsx  Water_00.tsx  archerTower_00.tsx  archerTower_01.tsx  boat_01.tsx  buttons.tsx  fox.tsx  mill_00.tsx  mill_01.tsx  smoke_01.tsx  town_01.tsx  turbine_00.tsx  turbine_01.tsx
debian/: changelog  control  copyright  kingsandships-data.install  kingsandships.install  rules  watch
debian/source/: options
doc/: Doxyfile
doc/html/: annotated.html  annotated_dup.js  barricade_8h_source.html  boat_8h_source.html  class_c___anim_time-members.html  class_c___anim_time.html  class_c___anim_time.js  class_c___anim_time__coll__graph.map  class_c___anim_time__coll__graph.md5  class_c___archer_tower-members.html  class_c___archer_tower.html  class_c___archer_tower.js  class_c___archer_tower__coll__graph.map  class_c___archer_tower__coll__graph.md5  class_c___archer_tower__inherit__graph.map  class_c___archer_tower__inherit__graph.md5  class_c___barricade-members.html  class_c___barricade.html  class_c___barricade.js  class_c___barricade__coll__graph.map  class_c___barricade__coll__graph.md5  class_c___barricade__inherit__graph.map  class_c___barricade__inherit__graph.md5  class_c___boat-members.html  class_c___boat.html  class_c___boat.js  class_c___boat__coll__graph.map  class_c___boat__coll__graph.md5  class_c___boat__inherit__graph.map  class_c___boat__inherit__graph.md5  class_c___button-members.html  class_c___button.html  class_c___button.js  class_c___button__coll__graph.map  class_c___button__coll__graph.md5  class_c___button__inherit__graph.map  class_c___button__inherit__graph.md5  class_c___center_camera-members.html  class_c___center_camera.html  class_c___center_camera.js  (+472 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_2.js  files_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
po/: updatePO.sh
po/fr/: fr.po  kingsandships.mo
src/: Makefile.am  Makefile.in  anim.cpp  anim.h  command.cpp  command.h  config.h.in  coord.cpp  coord.h  game.cpp  game.h  gameUnits.cpp  gameUnits.h  grid.cpp  grid.h  invaders.cpp  invaders.h  landscape.cpp  landscape.h  level.cpp  level.h  locator.cpp  locator.h  main.cpp  menu.cpp  menu.h  menuItems.cpp  menuItems.h  message.cpp  message.h  pathfinding.cpp  pathfinding.h  settings.cpp  settings.h  shooter.cpp  shooter.h  surfaces.cpp  surfaces.h  texture.cpp  texture.h  (+18 more)
src/img/: Arrows_01.blend  Arrows_01.blend1  Big_buttons.xcf  BoatDead_01.blend  BoatDead_01.blend1  Boat_01.blend  Boat_01.blend1  Clouds.blend  Clouds_2_79.blend  Clouds_2_91.blend  CrossBow_01.blend  CrossBow_01.blend1  Fox_01.blend  Fox_01.blend1  Gold_01.blend  Grass02.blend  Grass02.blend1  Grass_01.blend  Grass_01.blend1  Icons.xcf  Icons32.xcf  Lion_01.blend  Mill_01.blend  Mill_01.blend1  Parchment_01.blend  ProgressBar.blend  Rocks_01.blend  Selection_01.blend  Smoke01.blend  Smoke01.blend1  Tower_Attack_01.blend  Tower_Attack_01.blend1  Tower_Level01_01.blend  Tower_Level01_01.blend1  Tower_Level01_01Cycle.blend  Tower_Level01_01Cycle.blend1  Town_01.blend  Town_01.blend1  Town_02.blend  Town_02.blend1  (+17 more)
src/level/: barricade.cpp  barricade.h  boat.cpp  boat.h  factory.cpp  factory.h  gameUnits.cpp  gameUnits.h  grid.cpp  grid.h  invaders.cpp  invaders.h  landscape.cpp  landscape.h  level.cpp  level.h  node.cpp  node.h  pathfinding.cpp  pathfinding.h  shooter.cpp  shooter.h  towers.cpp  towers.h  town.cpp  town.h  weapons.cpp  weapons.h  zlayer.cpp  zlayer.h
src/menu/: command.cpp  command.h  menu.cpp  menu.h  menuItems.cpp  menuItems.h  popup.cpp  popup.h  tab.cpp  tab.h
